Fix : Added the volume

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,30 @@ black
 diffusers
 transformers
 torch
+torchvision  
 accelerate
 cloudinary
 opencv-python
+python-dotenv
+ffmpeg-python 
+pydub
+controlnet_aux 
+invisible_watermark 
+transformers 
+safetensors 
+xformers
+omegaconf  
+Pillow 
+timm 
+tqdm 
+kornia 
+gdown 
+pyvirtualcam 
+transparent-background
+onnxruntime 
+einops 
+insightface 
+peft
+imageio 
+imageio-ffmpeg
+sdqrcode
