--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-accelerate==0.27.2
+accelerate==0.25.0
 aiohttp==3.9.3
 aiosignal==1.3.1
 aiostream==0.5.2
@@ -21,7 +21,7 @@ contourpy==1.2.0
 controlnet-aux==0.0.7
 cycler==0.12.1
 Cython==3.0.8
-diffusers==0.26.3
+diffusers[torch]==0.25.0
 dnspython==2.6.1
 easydict==1.12
 einops==0.7.0
@@ -78,21 +78,24 @@ nvidia-nvtx-cu12==12.1.105
 omegaconf==2.3.0
 onnx==1.15.0
 onnxruntime==1.17.1
+onnxruntime-gpu==1.16.0
 opencv-python==4.9.0.80
 opencv-python-headless==4.9.0.80
+open-clip-torch==2.20.0
 packaging==23.2
 pathspec==0.12.1
 peft==0.9.0
 pillow==10.2.0
 platformdirs==4.2.0
 prettytable==3.10.0
-protobuf==4.25.2
+protobuf
 psutil==5.9.8
 pydantic==2.6.1
 pydantic_core==2.16.2
 pydub==0.25.1
 Pygments==2.17.2
 pymongo==4.6.2
+pytorch-lightning==1.9.0
 pyparsing==3.1.1
 pypng==0.20220715.0
 pyre-extensions==0.0.23
@@ -125,12 +128,13 @@ tifffile==2024.2.12
 timm==0.9.16
 tokenizers==0.15.2
 toml==0.10.2
-torch==2.2.1
-torchvision==0.17.1
+torch==2.0.1
+torchvision
 tqdm==4.66.2
-transformers==4.38.1
+transformers==4.36.2
+voluptuous==0.13.1
 transparent-background==1.2.12
-triton==2.2.0
+triton==2.0.0
 typer==0.9.0
 types-certifi==2021.10.8.3
 types-toml==0.10.8.7
@@ -141,8 +145,20 @@ watchfiles==0.21.0
 wcwidth==0.2.13
 webuiapi==0.9.8
 wget==3.2
-xformers==0.0.16
+xformers==0.0.21
 yarl==1.9.4
 zipp==3.17.0
-imaginairy==14.1.1
+imaginairy
 transparent-background
+uvicorn 
+Pillow  
+elevenlabs  
+celery[redis] 
+redis   
+python-multipart 
+pillow-heif 
+cached_property 
+dependency-injector
+cachetools
+openai
+loguru
