--- a/requirements.txt
+++ b/requirements.txt
@@ -63,18 +63,6 @@ multidict==6.0.5
 mypy-extensions==1.0.0
 networkx==3.2.1
 numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.3.101
-nvidia-nvtx-cu12==12.1.105
 omegaconf==2.3.0
 onnx==1.15.0
 onnxruntime==1.17.1
@@ -113,7 +101,6 @@ rich==13.7.0
 safetensors==0.4.2
 scikit-image==0.22.0
 scikit-learn==1.4.1.post1
-scipy==1.12.0
 sdqrcode==0.3.12
 sigtools==4.0.1
 six==1.16.0
@@ -128,13 +115,13 @@ tifffile==2024.2.12
 timm==0.9.16
 tokenizers==0.15.2
 toml==0.10.2
-torch==2.0.1
+torch==2.2.1
 torchvision
 tqdm==4.66.2
-transformers==4.36.2
+transformers
 voluptuous==0.13.1
 transparent-background==1.2.12
-triton==2.0.0
+triton
 typer==0.9.0
 types-certifi==2021.10.8.3
 types-toml==0.10.8.7
@@ -145,10 +132,10 @@ watchfiles==0.21.0
 wcwidth==0.2.13
 webuiapi==0.9.8
 wget==3.2
-xformers==0.0.21
+xformers
 yarl==1.9.4
 zipp==3.17.0
-imaginairy
+imaginairy==14.1
 transparent-background
 uvicorn 
 Pillow  
