--- a/requirements.txt
+++ b/requirements.txt
@@ -139,7 +139,7 @@ imaginairy==14.1
 transparent-background
 uvicorn 
 Pillow  
-elevenlabs  
+elevenlabs==0.2.27
 celery[redis] 
 redis   
 python-multipart 
