--- a/.github/workflows/ModalDeploy.yml
+++ b/.github/workflows/ModalDeploy.yml
@@ -14,6 +14,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     environment: secrets
+    env:
+      GCP_TYPE: ${{ secrets.GCP_TYPE }} 
+      GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }} 
+      GCP_PRIVATE_KEY_ID: ${{ secrets.GCP_PRIVATE_KEY_ID }} 
+      GCP_PRIVATE_KEY: ${{ secrets.GCP_PRIVATE_KEY }} 
+      GCP_CLIENT_EMAIL: ${{ secrets.GCP_CLIENT_EMAIL }} 
+      GCP_CLIENT_ID: ${{ secrets.GCP_CLIENT_ID }} 
+      GCP_AUTH_URI: ${{ secrets.GCP_AUTH_URI }} 
+      GCP_TOKEN_URI: ${{ secrets.GCP_TOKEN_URI }} 
+      GCP_AUTH_PROVIDER_X509_CERT_URL: ${{ secrets.GCP_AUTH_PROVIDER_X509_CERT_URL }} 
+      GCP_CLIENT_X509_CERT_URL: ${{ secrets.GCP_CLIENT_X509_CERT_URL }} 
+      GCP_UNIVERSE_DOMAIN: ${{ secrets.GCP_UNIVERSE_DOMAIN }} 
+      BUCKET_NAME: ${{ secrets.BUCKET_NAME }} 
 
     steps:
       - name: Checkout Repository
