--- a/.github/workflows/ModalDeploy.yml
+++ b/.github/workflows/ModalDeploy.yml
@@ -3,11 +3,11 @@ name: CI/CD
 on:
   push:
     branches:
-      - main
+      - master
       - dev
   pull_request:
     branches: 
-      - main
+      - master
       - dev
 
 jobs:
