--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,6 +23,7 @@ steps:
     allowFailure: true
 
   - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
     args: [
       'build', 
       '-t', 'gcr.io/$PROJECT_ID/${_APP_NAME}:latest', 
