--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,13 +23,16 @@ steps:
     allowFailure: true
 
   - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
     args: [
+      '-c',
+      'docker',
       'build', 
       '-t', 'gcr.io/$PROJECT_ID/${_APP_NAME}:latest', 
       '-t', 'gcr.io/$PROJECT_ID/${_APP_NAME}:${_COMMIT_SHA}', 
       '--cache-from', 'gcr.io/$PROJECT_ID/${_APP_NAME}:latest', 
-      '--build-arg', 'TOKEN_ID=${TOKEN_ID}',
-      '--build-arg', 'TOKEN_SECRET=${TOKEN_SECRET}',
+      '--build-arg', 'TOKEN_ID=$$OKEN_ID',
+      '--build-arg', 'TOKEN_SECRET=$$TOKEN_SECRET',
       '.'
     ]
     waitFor: ['pull-latest-image']
