--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,7 +26,7 @@ steps:
     entrypoint: 'bash'
     args: [
       '-c',
-      'docker build -t gcr.io/$PROJECT_ID/${_APP_NAME}:latest -t gcr.io/$PROJECT_ID/${_APP_NAME}:${_COMMIT_SHA} --cache-from gcr.io/$PROJECT_ID/${_APP_NAME}:latest .',
+      'docker build --build-kit -t gcr.io/$PROJECT_ID/${_APP_NAME}:latest -t gcr.io/$PROJECT_ID/${_APP_NAME}:${_COMMIT_SHA} --cache-from gcr.io/$PROJECT_ID/${_APP_NAME}:latest .',
     ]
     waitFor: ['pull-latest-image']
     secretEnv: ['TOKEN_ID', 'TOKEN_SECRET']
