Fix : removed the echo part

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,18 +7,8 @@ substitutions:
   _ENVIRONMENT: '${BRANCH_NAME}'
 
 steps:
-  - name: 'gcr.io/cloud-builders/gcloud'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        echo "TOKEN_ID: $$TOKEN_ID"
-        echo "TOKEN_SECRET: $$TOKEN_SECRET"
-    secretEnv: ['TOKEN_ID', 'TOKEN_SECRET']
-
-
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['pull', 'gcr.io/$PROJECT_ID/${_APP_NAME}']
+    args: ['pull', 'gcr.io/$PROJECT_ID/${_APP_NAME}:latest']
     id: 'pull-latest-image'
     allowFailure: true
 
