--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,36 +1,46 @@
 options:
+  substitutionOption: ALLOW_LOOSE
   logging: CLOUD_LOGGING_ONLY
 
 substitutions:
-  _APP_NAME: 'modal-fastapi-server'
-  _COMMIT_SHA: '${SHORT_SHA}'
-  _ENVIRONMENT: '${BRANCH_NAME}'
+  _SERVICE_NAME: modal-fastapi-sls-server
+  _DEPLOY_REGION: us-central1
+  _AR_HOSTNAME: us-central1-docker.pkg.dev
+
 
 steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['pull', 'gcr.io/$PROJECT_ID/${_APP_NAME}:latest']
-    id: 'pull-latest-image'
-    allowFailure: true
-
   - name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         docker build \
-          -t gcr.io/$PROJECT_ID/${_APP_NAME}:latest \
-          -t gcr.io/$PROJECT_ID/${_APP_NAME}:${_COMMIT_SHA} \
-          --cache-from gcr.io/$PROJECT_ID/${_APP_NAME}:latest \
+          -t $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA \
           --build-arg TOKEN_ID=$$TOKEN_ID \
           --build-arg TOKEN_SECRET=$$TOKEN_SECRET \
           .
-    waitFor: ['pull-latest-image']
     secretEnv: ['TOKEN_ID', 'TOKEN_SECRET']
+  
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
+    args:
+      - run
+      - services
+      - update
+      - $_SERVICE_NAME
+      - '--platform=managed'
+      - >-
+        --image=$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
+      - >-
+        --labels=managed-by=gcp-cloud-build-deploy-cloud-run,commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID
+      - '--region=$_DEPLOY_REGION'
+      - '--quiet'
+    id: Deploy
+    entrypoint: gcloud
 
 
 images:
-  - 'gcr.io/$PROJECT_ID/${_APP_NAME}:latest'
-  - 'gcr.io/$PROJECT_ID/${_APP_NAME}:${_COMMIT_SHA}'
+  - >-
+    $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
 
 availableSecrets:
   secretManager:
@@ -38,3 +48,9 @@ availableSecrets:
       env: 'TOKEN_ID'
     - versionName: projects/$PROJECT_ID/secrets/TOKEN_SECRET/versions/latest
       env: 'TOKEN_SECRET'
+
+
+
+
+
+
