--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,8 @@ substitutions:
   _SERVICE_NAME: modal-fastapi-sls-server
   _DEPLOY_REGION: us-central1
   _AR_HOSTNAME: us-central1-docker.pkg.dev
-
+  _CLUSTER_LOCATION: us-central1
+  _CLUSTER_NAME: modal-fastapi-server
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
@@ -28,21 +29,12 @@ steps:
         $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
     id: Push
   
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
+  - name: 'gcr.io/cloud-builders/gke-deploy'
     args:
-      - run
-      - services
-      - update
-      - $_SERVICE_NAME
-      - '--platform=managed'
-      - >-
-        --image=$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
-      - >-
-        --labels=managed-by=gcp-cloud-build-deploy-cloud-run,commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID
-      - '--region=$_DEPLOY_REGION'
-      - '--quiet'
-    id: Deploy
-    entrypoint: gcloud
+    - run
+    - --filename=deployment-service.yaml
+    - --location=${_CLUSTER_LOCATION}
+    - --cluster=${_CLUSTER_NAME}
 
 
 images:
