--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,84 +11,37 @@ substitutions:
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
     args:
-      - 'build'
-      - '-t'
-      - '$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
-      - '--build-arg'
-      - 'TOKEN_ID=${_TOKEN_ID}'
-      - '--build-arg'
-      - 'TOKEN_SECRET=${_TOKEN_SECRET}'
-      - '--build-arg'
-      - 'API_KEY=${_API_KEY}'
-      - '--build-arg'
-      - 'BUCKET_NAME=${_BUCKET_NAME}'
-      - '--build-arg'
-      - 'CLAUDE_API_KEY=${_CLAUDE_API_KEY}'
-      - '--build-arg'
-      - 'DID_KEY=${_DID_KEY}'
-      - '--build-arg'
-      - 'ELEVENLABS_API_KEY=${_ELEVENLABS_API_KEY}'
-      - '--build-arg'
-      - 'GCP_AUTH_PROVIDER_X509_CERT_URL=${_GCP_AUTH_PROVIDER_X509_CERT_URL}'
-      - '--build-arg'
-      - 'GCP_AUTH_URI=${_GCP_AUTH_URI}'
-      - '--build-arg'
-      - 'GCP_CLIENT_EMAIL=${_GCP_CLIENT_EMAIL}'
-      - '--build-arg'
-      - 'GCP_CLIENT_ID=${_GCP_CLIENT_ID}'
-      - '--build-arg'
-      - 'GCP_CLIENT_X509_CERT_URL=${_GCP_CLIENT_X509_CERT_URL}'
-      - '--build-arg'
-      - 'GCP_PRIVATE_KEY=${_GCP_PRIVATE_KEY}'
-      - '--build-arg'
-      - 'GCP_PRIVATE_KEY_ID=${_GCP_PRIVATE_KEY_ID}'
-      - '--build-arg'
-      - 'GCP_PROJECT_ID=${_GCP_PROJECT_ID}'
-      - '--build-arg'
-      - 'GCP_TOKEN_URI=${_GCP_TOKEN_URI}'
-      - '--build-arg'
-      - 'GCP_TYPE=${_GCP_TYPE}'
-      - '--build-arg'
-      - 'GCP_UNIVERSE_DOMAIN=${_GCP_UNIVERSE_DOMAIN}'
-      - '--build-arg'
-      - 'NUM_WORKERS=${_NUM_WORKERS}'
-      - '--build-arg'
-      - 'OPENAI_API_KEY=${_OPENAI_API_KEY}'
-      - '--build-arg'
-      - 'QOLABA_B2B_API_URL=${_QOLABA_B2B_API_URL}'
-      - '--build-arg'
-      - 'SDXL_API_KEY=${_SDXL_API_KEY}'
-      - '--build-arg'
-      - 'ENVIRONMENT=${_ENVIRONMENT}'
-      - '--build-arg'
-      - 'CDN_API=${_CDN_API}'
-      - '.'
+      - '-c'
+      - |
+        docker build -t $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA --build-arg TOKEN_ID=$$TOKEN_ID --build-arg TOKEN_SECRET=$$TOKEN_SECRET --build-arg API_KEY=$$API_KEY --build-arg BUCKET_NAME=$$BUCKET_NAME --build-arg CLAUDE_API_KEY=$$CLAUDE_API_KEY --build-arg DID_KEY=$$DID_KEY --build-arg ELEVENLABS_API_KEY=$$ELEVENLABS_API_KEY --build-arg GCP_AUTH_PROVIDER_X509_CERT_URL=$$GCP_AUTH_PROVIDER_X509_CERT_URL --build-arg GCP_AUTH_URI=$$GCP_AUTH_URI --build-arg GCP_CLIENT_EMAIL=$$GCP_CLIENT_EMAIL --build-arg GCP_CLIENT_ID=$$GCP_CLIENT_ID --build-arg GCP_CLIENT_X509_CERT_URL=$$GCP_CLIENT_X509_CERT_URL --build-arg GCP_PRIVATE_KEY=$$GCP_PRIVATE_KEY --build-arg GCP_PRIVATE_KEY_ID=$$GCP_PRIVATE_KEY_ID --build-arg GCP_PROJECT_ID=$$GCP_PROJECT_ID --build-arg GCP_TOKEN_URI=$$GCP_TOKEN_URI --build-arg GCP_TYPE=$$GCP_TYPE --build-arg GCP_UNIVERSE_DOMAIN=$$GCP_UNIVERSE_DOMAIN --build-arg NUM_WORKERS=$$NUM_WORKERS --build-arg OPENAI_API_KEY=$$OPENAI_API_KEY --build-arg QOLABA_B2B_API_URL=$$QOLABA_B2B_API_URL --build-arg SDXL_API_KEY=$$SDXL_API_KEY --build-arg ENVIRONMENT=$$ENVIRONMENT --build-arg CDN_API=$$CDN_API .
+    
     secretEnv:
-      - '_TOKEN_ID'
-      - '_TOKEN_SECRET'
-      - '_API_KEY'
-      - '_BUCKET_NAME'
-      - '_CLAUDE_API_KEY'
-      - '_DID_KEY'
-      - '_ELEVENLABS_API_KEY'
-      - '_GCP_AUTH_PROVIDER_X509_CERT_URL'
-      - '_GCP_AUTH_URI'
-      - '_GCP_CLIENT_EMAIL'
-      - '_GCP_CLIENT_ID'
-      - '_GCP_CLIENT_X509_CERT_URL'
-      - '_GCP_PRIVATE_KEY'
-      - '_GCP_PRIVATE_KEY_ID'
-      - '_GCP_PROJECT_ID'
-      - '_GCP_TOKEN_URI'
-      - '_GCP_TYPE'
-      - '_GCP_UNIVERSE_DOMAIN'
-      - '_NUM_WORKERS'
-      - '_OPENAI_API_KEY'
-      - '_QOLABA_B2B_API_URL'
-      - '_SDXL_API_KEY'
-      - '_ENVIRONMENT'
-      - '_CDN_API'
+      - 'TOKEN_ID'
+      - 'TOKEN_SECRET'
+      - 'API_KEY'
+      - 'BUCKET_NAME'
+      - 'CLAUDE_API_KEY'
+      - 'DID_KEY'
+      - 'ELEVENLABS_API_KEY'
+      - 'GCP_AUTH_PROVIDER_X509_CERT_URL'
+      - 'GCP_AUTH_URI'
+      - 'GCP_CLIENT_EMAIL'
+      - 'GCP_CLIENT_ID'
+      - 'GCP_CLIENT_X509_CERT_URL'
+      - 'GCP_PRIVATE_KEY'
+      - 'GCP_PRIVATE_KEY_ID'
+      - 'GCP_PROJECT_ID'
+      - 'GCP_TOKEN_URI'
+      - 'GCP_TYPE'
+      - 'GCP_UNIVERSE_DOMAIN'
+      - 'NUM_WORKERS'
+      - 'OPENAI_API_KEY'
+      - 'QOLABA_B2B_API_URL'
+      - 'SDXL_API_KEY'
+      - 'ENVIRONMENT'
+      - 'CDN_API'
 
   - name: 'gcr.io/cloud-builders/docker'
     args:
@@ -106,53 +59,4 @@ steps:
 images:
   - '$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
 
-availableSecrets:
-  secretManager:
-    - versionName: projects/$PROJECT_ID/secrets/TOKEN_ID/versions/latest
-      env: '_TOKEN_ID'
-    - versionName: projects/$PROJECT_ID/secrets/TOKEN_SECRET/versions/latest
-      env: '_TOKEN_SECRET'
-    - versionName: projects/$PROJECT_ID/secrets/API_KEY/versions/latest
-      env: '_API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/BUCKET_NAME/versions/latest
-      env: '_BUCKET_NAME'
-    - versionName: projects/$PROJECT_ID/secrets/CLAUDE_API_KEY/versions/latest
-      env: '_CLAUDE_API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/DID_KEY/versions/latest
-      env: '_DID_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/ELEVENLABS_API_KEY/versions/latest
-      env: '_ELEVENLABS_API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_AUTH_PROVIDER_X509_CERT_URL/versions/latest
-      env: '_GCP_AUTH_PROVIDER_X509_CERT_URL'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_AUTH_URI/versions/latest
-      env: '_GCP_AUTH_URI'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_CLIENT_EMAIL/versions/latest
-      env: '_GCP_CLIENT_EMAIL'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_CLIENT_ID/versions/latest
-      env: '_GCP_CLIENT_ID'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_CLIENT_X509_CERT_URL/versions/latest
-      env: '_GCP_CLIENT_X509_CERT_URL'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_PRIVATE_KEY/versions/latest
-      env: '_GCP_PRIVATE_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_PRIVATE_KEY_ID/versions/latest
-      env: '_GCP_PRIVATE_KEY_ID'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_PROJECT_ID/versions/latest
-      env: '_GCP_PROJECT_ID'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_TOKEN_URI/versions/latest
-      env: '_GCP_TOKEN_URI'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_TYPE/versions/latest
-      env: '_GCP_TYPE'
-    - versionName: projects/$PROJECT_ID/secrets/GCP_UNIVERSE_DOMAIN/versions/latest
-      env: '_GCP_UNIVERSE_DOMAIN'
-    - versionName: projects/$PROJECT_ID/secrets/NUM_WORKERS/versions/latest
-      env: '_NUM_WORKERS'
-    - versionName: projects/$PROJECT_ID/secrets/OPENAI_API_KEY/versions/latest
-      env: '_OPENAI_API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/QOLABA_B2B_API_URL/versions/latest
-      env: '_QOLABA_B2B_API_URL'
-    - versionName: projects/$PROJECT_ID/secrets/SDXL_API_KEY/versions/latest
-      env: '_SDXL_API_KEY'
-    - versionName: projects/$PROJECT_ID/secrets/environment_dev/versions/latest
-      env: '_ENVIRONMENT'
-    - versionName: projects/$PROJECT_ID/secrets/CDN_API/versions/latest
-      env: '_CDN_API'
+# ... (rest of your cloudbuild.yaml file)
