--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -59,4 +59,54 @@ steps:
 images:
   - '$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
 
-# ... (rest of your cloudbuild.yaml file)
+
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/TOKEN_ID/versions/latest
+      env: 'TOKEN_ID'
+    - versionName: projects/$PROJECT_ID/secrets/TOKEN_SECRET/versions/latest
+      env: 'TOKEN_SECRET'
+    - versionName: projects/$PROJECT_ID/secrets/API_KEY/versions/latest
+      env: 'API_KEY'
+    - versionName: projects/$PROJECT_ID/secrets/BUCKET_NAME/versions/latest
+      env: 'BUCKET_NAME'
+    - versionName: projects/$PROJECT_ID/secrets/CLAUDE_API_KEY/versions/latest
+      env: 'CLAUDE_API_KEY'
+    - versionName: projects/$PROJECT_ID/secrets/DID_KEY/versions/latest
+      env: 'DID_KEY'
+    - versionName: projects/$PROJECT_ID/secrets/ELEVENLABS_API_KEY/versions/latest
+      env: 'ELEVENLABS_API_KEY'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_AUTH_PROVIDER_X509_CERT_URL/versions/latest
+      env: 'GCP_AUTH_PROVIDER_X509_CERT_URL'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_AUTH_URI/versions/latest
+      env: 'GCP_AUTH_URI'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_CLIENT_EMAIL/versions/latest
+      env: 'GCP_CLIENT_EMAIL'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_CLIENT_ID/versions/latest
+      env: 'GCP_CLIENT_ID'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_CLIENT_X509_CERT_URL/versions/latest
+      env: 'GCP_CLIENT_X509_CERT_URL'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_PRIVATE_KEY/versions/latest
+      env: 'GCP_PRIVATE_KEY'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_PRIVATE_KEY_ID/versions/latest
+      env: 'GCP_PRIVATE_KEY_ID'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_PROJECT_ID/versions/latest
+      env: 'GCP_PROJECT_ID'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_TOKEN_URI/versions/latest
+      env: 'GCP_TOKEN_URI'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_TYPE/versions/latest
+      env: 'GCP_TYPE'
+    - versionName: projects/$PROJECT_ID/secrets/GCP_UNIVERSE_DOMAIN/versions/latest
+      env: 'GCP_UNIVERSE_DOMAIN'
+    - versionName: projects/$PROJECT_ID/secrets/NUM_WORKERS/versions/latest
+      env: 'NUM_WORKERS'
+    - versionName: projects/$PROJECT_ID/secrets/OPENAI_API_KEY/versions/latest
+      env: 'OPENAI_API_KEY'
+    - versionName: projects/$PROJECT_ID/secrets/QOLABA_B2B_API_URL/versions/latest
+      env: 'QOLABA_B2B_API_URL'
+    - versionName: projects/$PROJECT_ID/secrets/SDXL_API_KEY/versions/latest
+      env: 'SDXL_API_KEY'
+    - versionName: projects/$PROJECT_ID/secrets/environment_dev/versions/latest
+      env: 'ENVIRONMENT'
+    - versionName: projects/$PROJECT_ID/secrets/CDN_API/versions/latest
+      env: 'CDN_API'
