--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,14 @@
+options:
+  substitutionOption: ALLOW_LOOSE
+  logging: CLOUD_LOGGING_ONLY
+
+substitutions:
+  _SERVICE_NAME: modal-fastapi-sls-server
+  _DEPLOY_REGION: us-central1
+  _AR_HOSTNAME: us-central1-docker.pkg.dev
+  _CLUSTER_LOCATION: us-central1
+  _CLUSTER_NAME: modal-fastapi-server
+  
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
