--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -75,9 +75,17 @@ steps:
     id: Push
 
   - name: 'gcr.io/cloud-builders/gke-deploy'
+    entrypoint: /bin/sh
+    args:
+    - '-c'
+    - |
+      export _IMAGE_NAME='$_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
+      envsubst < deployment-service.yaml > deployment-service-mod.yaml
+
+  - name: 'gcr.io/cloud-builders/gke-deploy'
     args:
       - 'run'
-      - '--filename=deployment-service.yaml'
+      - '--filename=deployment-service-mod.yaml'
       - '--location=${_CLUSTER_LOCATION}'
       - '--cluster=${_CLUSTER_NAME}'
 
