--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: modal-fastapi-server
-        image: $_AR_HOSTNAME/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA
+        image: ${_IMAGE_NAME}
         ports:
         - containerPort: 9000
         resources:
