--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -47,3 +47,22 @@ spec:
       target:
         type: Utilization
         averageUtilization: 80
+
+---
+apiVersion: "v1"
+kind: "Service"
+metadata:
+  name: "modal-fastapi-server-service"
+  namespace: "default"
+  labels:
+    app: "modal-fastapi-server"
+    app.kubernetes.io/managed-by: "gcp-cloud-build-deploy"
+spec:
+  ports:
+  - protocol: "TCP"
+    port: 80
+    targetPort: 9000
+  selector:
+    app: "modal-fastapi-server"
+  type: "LoadBalancer"
+  loadBalancerIP: ""
