--- a/requirements.txt
+++ b/requirements.txt
@@ -1,150 +1,150 @@
-accelerate==0.25.0
-aiohttp==3.9.3
-aiosignal==1.3.1
-aiostream==0.5.2
-albumentations==1.4.0
-annotated-types==0.6.0
-antlr4-python3-runtime==4.9.3
-anyio==4.2.0
-asgiref==3.7.2
-attrs==23.2.0
-beanie==1.25.0
-beautifulsoup4==4.12.3
-black==24.2.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-cloudinary==1.38.0
-cloudpickle==2.2.1
-coloredlogs==15.0.1
-contourpy==1.2.0
-controlnet-aux==0.0.7
-cycler==0.12.1
-Cython==3.0.8
-diffusers[torch]==0.27.0
-dnspython==2.6.1
-easydict==1.12
-einops==0.7.0
-fastapi==0.109.2
-ffmpeg-python==0.2.0
-filelock==3.13.1
-flatbuffers==23.5.26
-fonttools==4.49.0
-frozenlist==1.4.1
-fsspec==2024.2.0
-future==1.0.0
-gdown==5.1.0
-grpclib==0.4.7
-h2==4.1.0
-hpack==4.0.0
-huggingface-hub==0.20.3
-humanfriendly==10.0
-hyperframe==6.0.1
-idna==3.6
-imageio==2.34.0
-imageio-ffmpeg==0.4.9
-importlib-metadata==7.0.1
-insightface==0.7.3
-invisible-watermark==0.2.0
-Jinja2==3.1.3
-joblib==1.3.2
-kiwisolver==1.4.5
-kornia==0.7.1
-lazy-model==0.2.0
-lazy_loader==0.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.3
-mdurl==0.1.2
-modal==0.61.3
-motor==3.3.2
-mpmath==1.3.0
-multidict==6.0.5
-mypy-extensions==1.0.0
-networkx==3.2.1
-numpy==1.26.4
-omegaconf==2.3.0
-onnx==1.15.0
-onnxruntime==1.17.1
-onnxruntime-gpu==1.17.1
-opencv-python==4.9.0.80
-opencv-python-headless==4.9.0.80
-open-clip-torch==2.20.0
-packaging==23.2
-pathspec==0.12.1
-peft==0.9.0
-pillow==10.2.0
-platformdirs==4.2.0
-prettytable==3.10.0
+accelerate
+aiohttp
+aiosignal
+aiostream
+albumentations
+annotated-types
+antlr4-python3-runtime
+anyio
+asgiref
+attrs
+beanie
+beautifulsoup4
+black
+certifi
+charset-normalizer
+click
+cloudinary
+cloudpickle
+coloredlogs
+contourpy
+controlnet-aux
+cycler
+Cython
+diffusers[torch]
+dnspython
+easydict
+einops
+fastapi
+ffmpeg-python
+filelock
+flatbuffers
+fonttools
+frozenlist
+fsspec
+future
+gdown
+grpclib
+h2
+hpack
+huggingface-hub
+humanfriendly
+hyperframe
+idna
+imageio
+imageio-ffmpeg
+importlib-metadata
+insightface
+invisible-watermark
+Jinja2
+joblib
+kiwisolver
+kornia
+lazy-model
+lazy_loader
+markdown-it-py
+MarkupSafe
+matplotlib
+mdurl
+modal
+motor
+mpmath
+multidict
+mypy-extensions
+networkx
+numpy
+omegaconf
+onnx
+onnxruntime
+onnxruntime-gpu
+opencv-python
+opencv-python-headless
+open-clip-torch
+packaging
+pathspec
+peft
+pillow
+platformdirs
+prettytable
 protobuf
-psutil==5.9.8
-pydantic==2.6.1
-pydantic_core==2.16.2
-pydub==0.25.1
-Pygments==2.17.2
-pymongo==4.6.2
-pytorch-lightning==1.9.0
-pyparsing==3.1.1
-pypng==0.20220715.0
-pyre-extensions==0.0.23
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pyvirtualcam==0.11.1
-PyWavelets==1.5.0
-PyYAML==6.0.1
-qrcode==7.4.2
-qudida==0.0.4
-regex==2023.12.25
-requests==2.31.0
-rich==13.7.0
-safetensors==0.4.2
-scikit-image==0.22.0
-scikit-learn==1.4.1.post1
-sdqrcode==0.3.12
-sigtools==4.0.1
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.5
-starlette==0.36.3
-sympy==1.12
-synchronicity==0.6.2
-tblib==3.0.0
-threadpoolctl==3.3.0
-tifffile==2024.2.12
-timm==0.9.16
-tokenizers==0.15.2
-toml==0.10.2
-torch==2.2.1
+psutil
+pydantic
+pydantic_core
+pydub
+Pygments
+pymongo
+pytorch-lightning
+pyparsing
+pypng
+pyre-extensions
+PySocks
+python-dateutil
+python-dotenv
+pyvirtualcam
+PyWavelets
+PyYAML
+qrcode
+qudida
+regex
+requests
+rich
+safetensors
+scikit-image
+scikit-learn
+sdqrcode
+sigtools
+six
+sniffio
+soupsieve
+starlette
+sympy
+synchronicity
+tblib
+threadpoolctl
+tifffile
+timm
+tokenizers
+toml
+torch
 torchvision
-tqdm==4.66.2
+tqdm
 transformers
-voluptuous==0.13.1
-transparent-background==1.2.12
-triton
-typer==0.9.0
-types-certifi==2021.10.8.3
-types-toml==0.10.8.7
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-urllib3==2.2.1
-watchfiles==0.21.0
-wcwidth==0.2.13
-webuiapi==0.9.8
-wget==3.2
-xformers
-yarl==1.9.4
-zipp==3.17.0
-imaginairy==14.1
+voluptuous
 transparent-background
-uvicorn 
-Pillow  
+triton
+typer
+types-certifi
+types-toml
+typing-inspect
+typing_extensions
+urllib3
+watchfiles
+wcwidth
+webuiapi
+wget
+xformers
+yarl
+zipp
+imaginairy
+transparent-background
+uvicorn
+Pillow
 elevenlabs==0.2.27
-celery[redis] 
-redis   
-python-multipart 
-pillow-heif 
-cached_property 
+celery[redis]
+redis
+python-multipart
+pillow-heif
+cached_property
 dependency-injector
 cachetools
 openai
@@ -152,5 +152,5 @@ loguru
 google-cloud-storage
 mistralai
 mediapipe
-anthropic==0.31.1
+anthropic
 replicate
