Fix : added fal and ideogram models

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -57,6 +57,9 @@ steps:
         gcloud secrets versions access $$_SECRET_ALIAS --secret="CDN_API" > /workspace/CDN_API.txt
         gcloud secrets versions access $$_SECRET_ALIAS --secret="REPLICATE_API_TOKEN" > /workspace/REPLICATE_API_TOKEN.txt
         gcloud secrets versions access $$_SECRET_ALIAS --secret="MUSIC_GEN_API_KEY" > /workspace/MUSIC_GEN_API_KEY.txt
+        gcloud secrets versions access $$_SECRET_ALIAS --secret="FAL_KEY" > /workspace/FAL_KEY.txt
+        gcloud secrets versions access $$_SECRET_ALIAS --secret="IDEOGRAM_API_KEY" > /workspace/IDEOGRAM_API_KEY.txt
+
   - name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
     args:
@@ -90,6 +93,8 @@ steps:
           --build-arg CDN_API="$(cat /workspace/CDN_API.txt)" \
           --build-arg REPLICATE_API_TOKEN="$(cat /workspace/REPLICATE_API_TOKEN.txt)" \
           --build-arg MUSIC_GEN_API_KEY="$(cat /workspace/MUSIC_GEN_API_KEY.txt)" \
+          --build-arg FAL_KEY="$(cat /workspace/FAL_KEY.txt)" \
+          --build-arg IDEOGRAM_API_KEY="$(cat /workspace/IDEOGRAM_API_KEY.txt)" \
           .
   
   - name: gcr.io/cloud-builders/docker
