Fix : added Leonardo and bool check for content moderation

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -59,6 +59,7 @@ steps:
         gcloud secrets versions access $$_SECRET_ALIAS --secret="MUSIC_GEN_API_KEY" > /workspace/MUSIC_GEN_API_KEY.txt
         gcloud secrets versions access $$_SECRET_ALIAS --secret="FAL_KEY" > /workspace/FAL_KEY.txt
         gcloud secrets versions access $$_SECRET_ALIAS --secret="IDEOGRAM_API_KEY" > /workspace/IDEOGRAM_API_KEY.txt
+        gcloud secrets versions access $$_SECRET_ALIAS --secret="LEONARDO_API_KEY" > /workspace/LEONARDO_API_KEY.txt
 
   - name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
@@ -95,6 +96,7 @@ steps:
           --build-arg MUSIC_GEN_API_KEY="$(cat /workspace/MUSIC_GEN_API_KEY.txt)" \
           --build-arg FAL_KEY="$(cat /workspace/FAL_KEY.txt)" \
           --build-arg IDEOGRAM_API_KEY="$(cat /workspace/IDEOGRAM_API_KEY.txt)" \
+          --build-arg LEONARDO_API_KEY="$(cat /workspace/LEONARDO_API_KEY.txt)" \
           .
   
   - name: gcr.io/cloud-builders/docker
