--- a/supervisord.conf
+++ b/supervisord.conf
@@ -21,7 +21,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:celery]
-command=celery -A src.FastAPIServer.celery.Worker.celery worker --loglevel=info
+command=celery -A src.FastAPIServer.celery.Worker.celery worker --loglevel=info -c 2
 directory=/root/app
 autostart=true
 autorestart=true
