fix: update requirements and dockerfile

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,34 @@
-accelerate
-aiohttp
-aiosignal
-aiostream
-albumentations
-annotated-types
-antlr4-python3-runtime
-anyio
-asgiref
-attrs
-beanie
-beautifulsoup4
-black
-certifi
-charset-normalizer
-click
-cloudinary
-cloudpickle
-coloredlogs
-contourpy
-controlnet-aux
-cycler
-Cython
-diffusers[torch]
-dnspython
-easydict
-einops
-fastapi
-ffmpeg-python
-filelock
-flatbuffers
-fonttools
-frozenlist
-fsspec
-future
-gdown
-grpclib
-h2
-hpack
-huggingface-hub
-humanfriendly
-hyperframe
-idna
-imageio
-imageio-ffmpeg
-importlib-metadata
-insightface
-invisible-watermark
-Jinja2
-joblib
-kiwisolver
-kornia
-lazy-model
-lazy_loader
-markdown-it-py
-MarkupSafe
-matplotlib
-mdurl
-modal
-motor
-mpmath
-multidict
-mypy-extensions
-networkx
-numpy
-omegaconf
-onnx
-onnxruntime
-onnxruntime-gpu
-opencv-python
-opencv-python-headless
-open-clip-torch
-packaging
-pathspec
-peft
-pillow
-platformdirs
-prettytable
-protobuf
-psutil
-pydantic
-pydantic_core
-pydub
-Pygments
-pymongo
-pytorch-lightning
-pyparsing
-pypng
-pyre-extensions
-PySocks
-python-dateutil
-python-dotenv
-pyvirtualcam
-PyWavelets
-PyYAML
-qrcode
-qudida
-regex
-requests
-rich
-safetensors
-scikit-image
-scikit-learn
-sdqrcode
-sigtools
-six
-sniffio
-soupsieve
-starlette
-sympy
-synchronicity
-tblib
-threadpoolctl
-tifffile
-timm
-tokenizers
-toml
-torch
-torchvision
-tqdm
-transformers
-voluptuous
 transparent-background
-triton
-typer
-types-certifi
-types-toml
-typing-inspect
-typing_extensions
-urllib3
-watchfiles
-wcwidth
-webuiapi
-wget
-xformers
-yarl
-zipp
-imaginairy
-transparent-background
-uvicorn
-Pillow
-elevenlabs==0.2.27
-celery[redis]
-redis
-python-multipart
-pillow-heif
-cached_property
+uvicorn 
+Pillow  
+elevenlabs
+celery[redis] 
+redis   
+python-multipart 
+pillow-heif 
+cached_property 
 dependency-injector
 cachetools
 openai
 loguru
 google-cloud-storage
-mistralai
 mediapipe
 anthropic
+modal
+diffusers
+transformers
+pydub
 replicate
+fal-client
+google-cloud-aiplatform
+vertexai
+python-dotenv
 runwayml
 lumaai
+deepgram-sdk
+google-genai
+pytest
+pytest-cov
+pytest-asyncio==0.23.5
+pytest-cov==4.1.0
+pytest-mock
