--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:fastapi]
-command=python main.py
+command=uvicorn main:app --host 0.0.0.0 --port 9000 --workers 1
 directory=/root/app
 autostart=true
 autorestart=true
